--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
 		"goaop/parser-reflection": "^1.1",
 		"phpdocumentor/reflection-docblock": "^3.1",
 		"symfony/finder": "^3.2",
-		"symfony/options-resolver": "^3.2"
+		"symfony/options-resolver": "^3.2",
+		"symfony/yaml": "^3.2",
+		"elasticsearch/elasticsearch": "~2.0"
 	},
 	"autoload": {
 		"psr-4": {
